[gd_scene load_steps=5 format=2]

[ext_resource path="res://scripts/AdventureLobby.gd" type="Script" id=1]
[ext_resource path="res://background.png" type="Texture2D" id=2]
[ext_resource path="res://animations/loading/full_animation.tres" type="SpriteFrames" id=4]
[ext_resource path="res://Theme/default/theme.tres" type="Theme" id=5]

[node name="Node2D" type="Node2D"]
position = Vector2( 1, 0 )
script = ExtResource( 1 )

[node name="background" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = ExtResource( 2 )

[node name="Menu" type="Node2D" parent="."]
visible = false

[node name="CreateRoomButton" type="Button" parent="Menu"]
offset_left = 76.0
offset_top = 466.0
offset_right = 661.0
offset_bottom = 594.0
theme = ExtResource( 5 )
text = "Create A Room"

[node name="JoinRoomEntry" type="LineEdit" parent="Menu"]
offset_left = 970.0
offset_top = 705.0
offset_right = 1421.0
offset_bottom = 821.0
theme = ExtResource( 5 )

[node name="JoinRoomButton" type="Button" parent="Menu"]
offset_left = 1434.0
offset_top = 704.0
offset_right = 1843.0
offset_bottom = 822.0
theme = ExtResource( 5 )
text = "Join Room"

[node name="ErrorLabel" type="Label" parent="Menu"]
visible = false
offset_left = 1298.0
offset_top = 847.0
offset_right = 2234.0
offset_bottom = 932.0
scale = Vector2( 0.5, 0.5 )
theme = ExtResource( 5 )
text = "error : can't find this room"

[node name="MapEditorButton" type="Button" parent="Menu"]
offset_left = 157.0
offset_top = 30.0
offset_right = 604.0
offset_bottom = 145.0
theme = ExtResource( 5 )
text = "Map Editor"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2( 947.205, 484.563 )
frames = ExtResource( 4 )
animation = "loop"
frame = 33

[node name="AcceptDialog" type="AcceptDialog" parent="."]
offset_left = 768.0
offset_top = 373.0
offset_right = 1132.0
offset_bottom = 448.0
window_title = "Can't connect to Mocra Adventure servers !"

[node name="ErrorLabel" type="Label" parent="AcceptDialog"]
offset_left = 8.0
offset_top = 8.0
offset_right = 356.0
offset_bottom = 39.0
text = "Mocra Adventure server is unavailable, report us if
 persisting or try again"
align = 1

[connection signal="level_changed" from="." to="." method="_on_Node2D_level_changed"]
[connection signal="ready_update" from="." to="." method="_on_Node2D_ready_update"]
[connection signal="selection_updated" from="." to="." method="_on_Node2D_selection_updated"]
[connection signal="pressed" from="Menu/CreateRoomButton" to="." method="_on_CreateRoomButton_pressed"]
[connection signal="pressed" from="Menu/JoinRoomButton" to="." method="_on_JoinRoomButton_pressed"]
[connection signal="pressed" from="Menu/MapEditorButton" to="." method="_on_MapEditorButton_pressed"]
[connection signal="confirmed" from="AcceptDialog" to="." method="_on_AcceptDialog_confirmed"]
